fixed z-index issue in footer add buttons

--- a/src/index.css
+++ b/src/index.css
@@ -296,6 +296,7 @@ button {
 
 .footer {
 	position: sticky;
+	z-index: 100;
 	bottom: 0;
 	width: 100%;
 	padding: 16px 0;
